fixes mysql and ibm sso

--- a/db2te/menu/view/menu_01a_MySQLCatalog.xml
+++ b/db2te/menu/view/menu_01a_MySQLCatalog.xml
@@ -15,7 +15,7 @@
   limitations under the License.
 
 -->
-<menu type="leaf" tag="r91" DBMS="MYSQL">
+<menu type="leaf" DBMS="MYSQL">
   <description>MySQL Catalog</description>
 	<pageWindow target="_active">
 		<panel name="Tutorial" PrimaryContainer="true">
